# data-flow-engine-python

./: .env.example  .replit  config.py  main.py  pyproject.toml  sample_pipelines.py  test_data.csv
app/: data_processor.py  database.py  db_connection.py  db_models.py  db_service.py  models.py  pipeline_engine.py  postgres_db.py  scheduler.py
app/routers/: api_sources.py  executions.py  files.py  pipelines.py  triggers.py
app/services/: api_connector.py  file_watcher.py  monitoring.py  validation.py  webhook_handler.py
app/utils/: __init__.py  exceptions.py  logger.py
data/: database.json
examples/: automation_examples.md
logs/: .gitkeep
outputs/: .gitkeep
outputs/outputs/: processed_sample.csv
static/: app.js  index.html  index_old.html  styles.css
static/js/: app.js
static/js/components/: dashboard.js  executions.js  files.js  pipelines.js  transformation-builder.js
static/js/services/: api.js  notification.js
static/js/templates/: layout.js
static/js/utils/: ui.js
uploads/: .gitkeep  sample_data.json  webhook_data_webhook_20250531_043337_20250531_043358.json
