[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.2",
]
